--- a/frontend/src/contentScript/contentScript.css
+++ b/frontend/src/contentScript/contentScript.css
@@ -1,17 +1,54 @@
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
 .slick-slider {
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-top: 11px;
+  padding-bottom: 11px;
 }
 
 .keyword-box {
+  padding: 8px;
   width: 270px;
   z-index: 10;
+  background-color: inherit;
   position: fixed;
-  background-color: white;
+  background-image: none;
   border: 1px solid lightgrey;
 }
 
+.keyword-title {
+  font-size: 16px;
+  text-align: left;
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-family: 'Pretendard-Regular';
+}
+
+.keyword-text {
+  font-size: 16px;
+  text-align: left;
+  font-family: 'Pretendard-Regular';
+}
+
+.font-bold {
+  text-align: center;
+  display: inline-block;
+  width: 20px;
+  font-weight: 900;
+  font-family: 'Pretendard-Regular';
+}
+
+.box-text {
+  font-size: 16px;
+  text-align: left;
+  font-family: 'Pretendard-Regular';
+  margin-bottom: 4px;
+}
