--- a/intro/src/index.css
+++ b/intro/src/index.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: "trigger";
+  src: url("./assets/fonts/210TriggerBold.ttf");
+}
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
