--- a/intro/src/index.css
+++ b/intro/src/index.css
@@ -23,7 +23,7 @@ html, body {
 .container {
   max-height: 100vh;
   max-width: 100vw;
-	overflow-y: scroll;
+	/* overflow-y: scroll; */
   scroll-snap-type: y mandatory;
 }
 
