--- a/intro/src/index.css
+++ b/intro/src/index.css
@@ -25,10 +25,12 @@ html, body {
   max-width: 100vw;
 	/* overflow-y: scroll; */
   scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
 }
 
 .panel {
   scroll-snap-align: start;
+  scroll-behavior: smooth;
   display: flex;
   justify-content:center;
   align-items:center;
